<resources>
    <string name="app_name">Peers</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_birth_date">Birth Date</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Selamat Datang</string>
    <string name="sign_in_link"><u>Sign In</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="birth_date_text">Birth Date</string>
    <string name="forgot_password"><u>Lupa Kata Sandi?</u></string>
    <string name="forgot_password_title">Lupa Kata Sandi</string>
    <string name="member_acquisition">Member\nAcquisition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_sign_out">Temp Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="identity_no">No Identitas</string>
    <string name="birth_date_text_indo">Tanggal Lahir</string>
    <string name="birth_place">Tempat Lahir</string>
    <string name="full_name">Nama Lengkap sesuai KTP</string>
    <string name="full_name_two_lines">Nama Lengkap\nsesuai KTP</string>
    <string name="mother_name">Nama Gadis Ibu Kandung</string>
    <string name="mother_name_two_lines">Nama Gadis\nIbu Kandung</string>
    <string name="marital_status">Status Pernikahan</string>
    <string name="last_education">Pendidikan Terakhir</string>
    <string name="next">Lanjut</string>
    <string name="sex">Jenis Kelamin</string>
    <string name="identity">Jenis Identitas</string>
    <string name="back">Kembali</string>
    <string name="address_status">Alamat sesuai KTP : Status Tempat Tinggal</string>
    <string name="address_status_domisili">Alamat Domisili : Status Tempat Tinggal</string>
    <string name="address_domisili_equal_ktp">Apakah alamat domisili sama dengan KTP?</string>
    <string name="address_how_long_text">Alamat Sesuai KTP : Lama Tinggal</string>
    <string name="address_how_long_domisili_text">Alamat domisili : Lama Tinggal</string>
    <string name="address_street">Alamat sesuai KTP : Jalan</string>
    <string name="address_no">Alamat sesuai KTP : Nomor</string>
    <string name="address_rt">Alamat sesuai KTP : RT</string>
    <string name="address_rw">Alamat sesuai KTP : RW</string>
    <string name="address_kelurahan">Alamat sesuai KTP : Kelurahan</string>
    <string name="address_kecamatan">Alamat sesuai KTP : Kecamatan</string>
    <string name="address_city">Alamat sesuai KTP : Kota</string>
    <string name="address_province">Alamat sesuai KTP : Provinsi</string>
    <string name="address_street_domisili">Alamat domisili : Jalan</string>
    <string name="address_no_domisili">Alamat domisili : Nomor</string>
    <string name="address_rt_domisili">Alamat domisili : RT</string>
    <string name="address_rw_domisili">Alamat domisili : RW</string>
    <string name="address_kelurahan_domisili">Alamat domisili : Kelurahan</string>
    <string name="address_kecamatan_domisili">Alamat domisili : Kecamatan</string>
    <string name="address_city_domisili">Alamat domisili : Kota</string>
    <string name="address_province_domisili">Alamat domisili : Provinsi</string>
    <string name="npwp_exist">Memiliki NPWP</string>
    <string name="occupation_status">Pekerjaan/Usaha</string>
    <string name="npwp_no">Nomor NPWP</string>
    <string name="occupation_field">Bidang Pekerjaan/Usaha</string>
    <string name="occupation_field_two_lines">Bidang Pekerjaan/\nUsaha</string>
    <string name="occupation_position">Posisi/Jabatan</string>
    <string name="company_name">Nama Perusahaan/Usaha</string>
    <string name="company_name_two_lines">Nama Perusahaan/\nUsaha</string>
    <string name="occupation_how_long">Lama Bekerja/Usaha</string>
    <string name="occupation_how_long_two_lines">Lama Bekerja/\nUsaha</string>
    <string name="occupation_revenue">Penghasilan/Omset usaha(Rp.)</string>
    <string name="occupation_revenue_two_lines">Penghasilan/\nOmset usaha(Rp.)</string>
    <string name="office_address_street">Alamat Kantor : Jalan</string>
    <string name="office_address_no">Alamat Kantor : Nomor</string>
    <string name="office_address_rt">Alamat Kantor : RT</string>
    <string name="office_address_rw">Alamat Kantor : RW</string>
    <string name="office_address_kelurahan">Alamat Kantor : Kelurahan</string>
    <string name="office_address_kecamatan">Alamat Kantor : Kecamatan</string>
    <string name="office_address_city">Alamat Kantor : Kota</string>
    <string name="office_address_province">Alamat Kantor : Provinsi</string>
    <string name="name">Nama</string>
    <string name="handphone_no">No Handphone</string>
    <string name="relationship">Hubungan</string>
    <string name="personal_information">Data Pribadi</string>
    <string name="address">Alamat</string>
    <string name="address_ktp">Alamat sesuai KTP</string>
    <string name="address_domisili">Alamat Domisili</string>
    <string name="address_office">Alamat Kantor</string>
    <string name="address_street_general">Jalan</string>
    <string name="address_no_general">Nomor</string>
    <string name="address_rt_general">RT</string>
    <string name="address_rw_general">RW</string>
    <string name="address_kelurahan_general">Kelurahan</string>
    <string name="address_kecamatan_general">Kecamatan</string>
    <string name="address_city_general">Kota</string>
    <string name="address_province_general">Provinsi</string>
    <string name="address_status_general">Status Tempat Tinggal</string>
    <string name="address_status_general_two_lines">Status Tempat\nTinggal</string>
    <string name="address_how_long_text_general">Lama Tinggal</string>
    <string name="occupation">Pekerjaan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="emergency_contact">Kontak Emergency</string>
    <string name="nama">Nama</string>
    <string name="hubungan">Hubungan</string>
    <string name="office_address">Alamat Kantor</string>
    <string name="number_of_loan">Jumlah Pinjaman</string>
    <string name="tenor">Tenor</string>
    <string name="loan_application">Loan\nApplication</string>
    <string name="repayment_collection">Repayment\nCollection</string>
    <string name="loan_disbursement">Loan\nDisbursement</string>
    <string name="service_fee">Service Fee</string>
    <string name="ajukan">Ajukan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="terms_text">Terms and Conditions</string>
    <string name="ulangi"><u>Ulangi</u></string>
    <string name="luas_rumah">Luas Rumah</string>
    <string name="jenis_atap">Jenis Atap</string>
    <string name="jenis_dinding">Jenis Dinding</string>
    <string name="kondisi_rumah">Kondisi Rumah</string>
    <string name="letak_rumah">Letak Rumah</string>
    <string name="data_fisik_perabot">Kondisi Fisik Perabot</string>
    <string name="akses_lembaga_keuangan">Akses ke Lembaga Keuangan Lain</string>
    <string name="info_ttg_usaha">Info tentang usaha</string>
    <string name="indeks_rumah">Indeks Rumah</string>
    <string name="indeks_asset">Indeks Asset</string>
    <string name="kepemilikan_asset">Kepemilikan Asset</string>
    <string name="pendapatan_luar_usaha">Pendapatan di Luar Usaha</string>
    <string name="perkembangan_asset">Perkembangan Asset</string>
    <string name="perkembangan_usaha">Perkembangan Usaha</string>
    <string name="tanggungan_keluarga">Tanggungan Keluarga</string>
    <string name="bunga">Bunga</string>
    <string name="simpanan_wajib">Simpanan Wajib</string>
    <string name="simpanan_sukarela">Simpanan Sukarela</string>
    <string name="denda">Denda</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="jumlah_setoran">Jumlah Setoran</string>
    <string name="angsuran_pokok">Angsuran Pokok</string>
    <string name="error_icon">Error Icon</string>
    <string name="error_empty_data">Data tidak ditemukan\ncoba ulangi atau\nhubungi admin koperasi anda</string>
    <string name="dana_jpk">Dana JPK</string>
</resources>