<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loans_unused.RcPersonalFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/identity"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/identity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/identity_no"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/identity_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/full_name"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/handphone_no"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/handphone_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/birth_date_text_indo"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/birth_place"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/birth_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sex"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mother_name"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/mother_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/marital_status"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/marital_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/last_education"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/last_education"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

</ScrollView>