<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_gravity="center"
            android:tint="@color/colorGrey"
            android:src="@drawable/ic_error_outline_black_96dp"
            android:contentDescription="@string/error_icon" />
        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/error_empty_data"/>
        <Button
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_button_bawah"
            android:text="@string/ulangi"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>